tests/ui/diagnostic_namespace/do_not_recommend/proc-macro-span.next.stderr
error[E0277]: mutable reference to C++ type requires a pin -- use Pin<&mut Arg>
  --> $DIR/proc-macro-span.rs:15:11
   |
LL | fn f(arg: &mut Arg);
   |           ^^^^^^^^ use `Pin<&mut Arg>`
   |
   = help: the trait `ReferenceToUnpin_Arg` is not implemented for `&mut Arg`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
